public/css/style.css
@import url(https://fonts.googleapis.com/css?family=Lato);

:root {
    --accent: #833999;
    --highlight: #e285ff;
    --offwhite: #eee;
    --disabled: #ccc;
    --light-gray: #ccc;
    --dark-gray: #aaa;
    --narrow: 500px;
    --wide: 700px;
    --padding-large: 2rem;
    --padding-small: 1rem;
}

.boxsizingBorder {
    -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
            box-sizing: border-box;
}

a {
    text-decoration: none;
}

body{
    background-color: var(--accent);
    background-image: url("../images/checker.png");
    background-repeat: repeat;
    /*font-family: sans-serif;*/
    font-family: 'Lato', sans-serif;
    font-size: 114%;
    line-height: 1.5;
    overflow-x: hidden;
}
body > * {
    max-width: var(--narrow);
}
body.full-width > * {
    max-width: var(--wide);
}
h1, h2, h3, h4, h5 {
    position: relative;
    margin: var(--padding-small) 0 0 0;
    padding: 0;
}
.hidden {
    display: none;
}
header{
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 2em auto;
}
#title{
    color: #fff;
    display: flex;
    align-items: center;
}
#title h1 {
    text-transform: uppercase;
    margin: 0 0 0 .5em;
    text-decoration: none;
}
#title img {
    width: 50px;
}
#subtitle {
    color: var(--offwhite);
    opacity: .85;
}
.wrapper{
    margin: 0 auto;
}
.tabs{
    display: flex;
}
.tabs * {
    flex-grow: 1;
}
.tab{
    cursor: pointer;
    background: var(--disabled);
    border-top-left-radius: 1em;
    border-top-right-radius: 1em;
    color: var(--accent);
    flex-basis: 25%;
    padding: .75em .125em .5em .125em;
    text-align: center;
}
.tab+.tab {
    margin-left: .25em;
}
.panels{
  background: var(--offwhite);
  box-shadow: 0 2rem 2rem #00000080;
  min-height: 200px;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  overflow-x: hidden;
  padding: 2rem;
}
.panel{
  display: none;
  animation: fadein .8s;
}
.panel p {
    margin: var(--padding-small) 0 0 0;
    padding: 0;
}
.form-group {
    margin-top: var(--padding-small);
}
#spinner {
    display: none;
    margin-top: var(--padding-small);
}
label {
    display: block;
}
input[type=text], textarea, input[type=url] {
    background: #fff;
    display: block;
    border: 1px solid gray;
    border-radius: 5px;
    font-family: monospace;
    font-size: 100%;
    padding: .25em .5em;
    min-height: 3em;
    width: 100%;
}
input[type=checkbox] {
    font-size: 100%;
    width: 2ch;
    height: 2ch;
}
input[type=file] {
    font-family: 'Lato', sans-serif;
    font-size: 100%;
}
select {
    font-family: 'Lato', sans-serif;
    font-size: 100%;
}
.btn {
    border: 1px solid var(--accent);
    background: var(--offwhite);
    font-family: 'Lato', sans-serif;
    font-size: 100%;
    font-weight: bold;
    padding: .5em 1em;
    border-radius: 5px;
    cursor: pointer;
    margin-top: var(--padding-large);
}
.btn:hover {
    background: var(--highlight);
    color: #fff;
}
.btn-primary {
    background: var(--accent);
    color: #fff;
}
@keyframes stretch {
    from {
        max-height: 0px;
    }
    to {
        max-height: 100%;
    }
}
@keyframes fadein {
    from {
        opacity:0;
    }
    to {
        opacity:1;
    }
}
.radio{
  display:none;
}
#one:checked ~ .panels #one-panel,
#two:checked ~ .panels #two-panel,
#three:checked ~ .panels #three-panel,
#four:checked ~ .panels #four-panel{
  display:block
}
#one:checked ~ .tabs #one-tab,
#two:checked ~ .tabs #two-tab,
#three:checked ~ .tabs #three-tab,
#four:checked ~ .tabs #four-tab{
  background: var(--offwhite);
  color: var(--accent);
  border-top: 5px solid var(--highlight);
  font-weight: bold;
}

#header-content {
    display: inline-block;
    /*max-width: 23ch;
    text-overflow: ellipsis;
    overflow-x: hidden;*/
    vertical-align: bottom;
    /*white-space: nowrap;*/
}

.shadow {
    box-shadow: 0px 0px .25rem 0px #000;
}

.tip-checkbox {
    display: none;
}

.tip-label {
    color:#fff;
    background-color:var(--accent);
    width:1.5rem;
    height:1.5rem;
    display:inline-block;
    border-radius:100%;
    font-size: 80%;
    opacity: .5;
    text-align:center;
    text-decoration:none;
    -webkit-box-shadow: inset -1px -1px 1px 0px rgba(0,0,0,0.25);
    -moz-box-shadow: inset -1px -1px 1px 0px rgba(0,0,0,0.25);
    box-shadow: inset -1px -1px 1px 0px rgba(0,0,0,0.25);
}

.tip-label:hover {
    cursor: pointer;
    font-weight: bold;
    opacity: 1.0;
}

.tip-checkbox + .tip-label + .tip-text {
    display: none;
}

.tip-checkbox:checked + .tip-label {
    display: none;
}

.tip-checkbox:checked + .tip-label + .tip-text {
    display: block;
}

.tip-text {
    animation: fadein .8s;
    color: #555;
    display: none;
    font-size: 80%;
    font-weight: normal;
}

.tip-text:hover {
    cursor: pointer;
}

#file-input:hover {
    cursor: pointer;
}

#content {
    font-family: monospace;
    line-height: 1.5rem;
    counter-reset: line;
    margin-top: var(--padding-small);
}

#content-title {
    font-family: 'Lato', sans-serif;
    margin: var(--padding-large) 0 0 0;
    padding: 0;
    text-transform: uppercase;
}

#content-title:first-child {
    margin-top: 0;
}

#content-text {
    border-left: 4ch solid #eee;
    display: block;
    font-size: 125%;
    white-space: pre-wrap;
    border-bottom-left-radius: 1em;
    border-bottom-right-radius: 1em;
    overflow: initial;
    padding: 0;
    /*white-space: break-spaces;*/
}

#content-text div {
    background: #f9f9f9;
    clip-path: inset( -100vw 0 -100vw -100vw);
    padding: .25rem;
    /*overflow-x: hidden;*/
    min-height: 3ex;
    position: relative;
}

#content-text div:nth-child(2n+1) {
    background: #fff;
}

#content-text div:before {
    content: counter(line);
    counter-increment: line;
    display: block;
    font-weight: bold;
    padding: 0 .5em;
    color: #555;
    position: absolute;
    right: 100%;
    text-align: right;
    width: 2rem;
}

#content-file {
    background: #e6e6e6;
    display: flex;
    align-items: center;
}

#content-file:hover {
    background: #aaa;
}

#content-file:hover #content-file-name {
    background: #bbb;
    color: #000;
}

#content-file-icon {
    max-width: 3rem;
    padding: 1em;
}

#content-file-name {
    align-self: stretch;
    background: #fff;
    color: #333;
    display: flex;
    flex-direction: column;
    justify-content: center;
    font-size: 150%;
    overflow: hidden;
    padding: 1em;
    flex-grow: 1;
    word-break: break-all;
}

#content-image {
    width: 100%;
}

#content-header {
    background: lightgray;
    color: #555;
    display: flex;
    font-family: 'Lato', sans-serif;
}

#content-header a {
    color: #555;
    padding: .25rem 1rem;
}

#content-header a:hover {
    background: #eee;
    color: #000;
}

#content-size {
    flex-grow: 1;
    padding: .25rem 1rem;
}

dl {
    display: table;
    margin-top: var(--padding-large);
}
dl * {
    vertical-align: top;
}
.definition {
    display: table-row;
}
dt, dd {
    padding-bottom: var(--padding-small);
}
dt {
    color: #555;
    display: table-cell;
    font-weight: bold;
    white-space: nowrap;
    text-align: right;
    text-transform: uppercase;
}
dd {
    display: table-cell;
    padding-left: 1em;
    width: 100%;
}
#qr-code {
    transition: fadein 1s;
}

#link-container {
    background: #fff;
    display: flex;
    font-weight: bold;
    border-radius: 1.5rem;
    overflow: hidden;
    justify-content: flex-start;
    flex-wrap: nowrap;
}

#link-label {
    background: var(--accent);
    color: #fff;
    display: inline-block;
    font-size: 150%;
    font-weight: normal;
    padding: .5em 1em;
    margin-right: .5em;
}

#link-text {
    font-size: 150%;
    color: var(--accent);
    flex-grow: 1;
    padding: .5em;
}
#link-anchor {
    background: var(--light-gray);
    color: #000;
    display: block;
    font-family: sans-serif;
    font-size: 150%;
    font-weight: normal;
    padding: .5em 1em;
}
#link-anchor:hover {
    background: #eee;
}
#hidden-link,
#hidden-content {
    display: none;
    width: 0;
    height: 0;
    position:relative;
    left: 100000px;
}

/** ERROR PAGE **/
.error-status,
.error-message {
    font-size: 200%;
    margin-bottom: 0;
    padding-bottom: 0;
    text-align: center;
}
.error-message {
    font-size: 150%;
}
.error-link {
    display: block;
    text-align: center;
    color: var(--accent);
}
.error-link:hover {
    text-decoration: underline;
}

/* LINKS */
.styled-table {
    margin-top: var(--padding-small);
}
.styled-table th {
    background: #aaa;
    font-weight: bold;
    text-align: center;
}
.styled-table td,
.styled-table th {
    padding: .25rem .5rem;
}
.styled-table td {
    word-wrap: anywhere;
}
.styled-table tr {
    background: #fff;
}
.styled-table tr:nth-child(2n+1) {
    background: #f9f9f9;
}
.styled-table .date {
    white-space: nowrap;
}
.styled-table img {
    height: 100px;
}
.styled-table .uid {
    word-wrap: normal;
}
.table-content {
    width: 100%;
}

#footer {
    color: #fff;
    padding: 2em 1em 3em 1em;
    opacity: 0.9;
    margin: 0 auto;
}
#footer a {
    color: #fff;
}
#footer a:hover {
    text-decoration: underline;
}
.row {
    align-items: flex-start;
    display: flex;
    gap: var(--padding-small);
}
.row > *:first-child {
    flex-grow: 1;
}
.column {
    flex-basis: 30rem;
}
.copyright {
    text-align: center;
}
@media only screen and (max-width: 650px) {
    #link-label {
        display: none;
    }
    #link-anchor {
        padding-left: .5rem;
        padding-right: .5rem;
    }
    .panels {
        padding: var(--padding-small);
    }
    #content-title {
        margin-top: var(--padding-small);
    }
    dt {
        margin-top: var(--padding-small);
    }
}
@media only screen and (max-width: 480px) {
    header {
        margin: var(--padding-small) auto;
    }
    #link-container {
        flex-direction: column;
    }
    #link-anchor {
        text-align: center;
    }
    .row {
        flex-wrap: wrap;
    }
    .definition {
        display: flex;
        flex-direction: column;
    }
    dt {
        margin-top: var(--padding-small);
        padding: 0;
        text-align: left;
    }
    dd {
        padding: 0;
    }
    dl {
        margin-top: var(--padding-small);
    }
}

